--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,11 +4,15 @@ setw -g pane-base-index 1
 
 set-option -g allow-rename off
 
+# Set default shell to bash
+set-option -g default-shell /bin/bash
+
 # Allow moving between panes in COPY mode
 setw -g mode-keys vi
 
 # remap prefix to Control + a
 set -g prefix C-a
+
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
